added color field to products

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -13,16 +13,19 @@ background-attachment: fixed;
 background-color: cadetblue;
 background-size: cover;
 color: white;
-}
-
-#txtbx {
-    width: 80%;
-    background-color: rgba(107,94,43,0.5); 
-    margin: 50px auto;
-    height: 40em;
-    padding: 20px;
+font-size: 1em;
 }
 
 a {
    color: white;
 }
+
+td {
+   font-size: .75em;
+   font-family: sans-serif;
+}
+
+.table-striped>tbody>tr:nth-child(odd)>td, 
+.table-striped>tbody>tr:nth-child(odd)>th {
+   background-color: #473524;
+ }
