--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,31 +1,31 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Products</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Image url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.name %></td>
-        <td><%= product.description %></td>
-        <td><%= product.image_url %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+    <div class = "container-fluid">
+       <h1>Listing Products</h1>
+        <table class = "table-striped table-bordered table-hover">
+           <thead>
+            <tr>
+                <th class="col-xs-12 col-sm-3 col-md-3">Name</th>
+                <th class="col-xs-12 col-sm-3 col-md-3">Description</th>
+                <th class="col-xs-12 col-sm-3 col-md-3">Image_url</th>
+                <th class="col-xs-12 col-sm-3 col-md-3">Colour</th>
+            </tr>
+           </thead>
+           <tbody>
+               <% @products.each do |product| %>
+            <tr>
+                <td class="col-lg-2 col-sm-2 col-md-2"><%= product.name %></td>
+                <td class="col-lg-2 col-sm-2 col-md-2"><%= product.description %></td>
+                <td class="col-lg-3 col-sm-3 col-md-3"><%= product.image_url %></td>
+                <td class="col-lg-2 col-sm-2 col-md-2"><%= product.colour %></td>
+                <td class="col-lg-1 col-sm-1 col-md-1"><%= link_to 'Show', product %></td>
+                <td class="col-lg-1 col-sm-1 col-md-1"><%= link_to 'Edit', edit_product_path(product) %></td>
+                <td class="col-lg-1 col-sm-1 col-md-1"><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+              <% end %>
+           </tbody>
+        </table>
+    </div>
 <br>
-
 <%= link_to 'New Product', new_product_path %>
+
