Added Info Pages

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -38,3 +38,15 @@ footer {
    background-color: rgba(71,53,36,0.75);
    text-align: center;
 }
+
+#text-box {
+    width: 80%;
+    background-color: rgba(107,94,43,0.5); 
+    margin: 50px auto;
+    height: 100%;
+    padding: 20px;
+}
+
+.anchor {
+   padding-top: 50px;
+}
