--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -10,7 +10,7 @@
       </ul>
     </div>
   <% end %>
-
+<div class="container anchor">
   <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
@@ -30,4 +30,6 @@
   <div class="actions">
     <%= f.submit %>
   </div>
+</div>
+
 <% end %>
