--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,7 +3,7 @@
 
 
    <% @products.each do |product| %>
-<div class = "container prdct">
+<div class = "container prdct anchor">
 <table class="table-bordered table-striped">
    <thead>
       <tr>
