--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,35 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-
-
-   <% @products.each do |product| %>
-<div class = "container prdct anchor">
-<table class="table-bordered table-striped">
-   <thead>
-      <tr>
-         <th class="col-sm-6 col-md-3"><%= product.name %></th>
-      </tr>
-   </thead>
-   <tbody>
-         <tr>
-      <td class="col-sm-6 col-md-3"><%= product.image_url %></td>
-   </tr>
-   <tr>
-      <td class="col-sm-6 col-md-3"><%= product.description %></td>
-   </tr>
-   <tr>
-      <td class="col-sm-6 col-md-3"><%= product.colour %></td>
-   </tr>
-   <tr>
-      <td class="col-sm-6 col-md-3">$<%= product.price %></td>
-   </tr>
-   <tr>
-      <td class="col-sm-6 col-md-3"><%= link_to 'Show -', product %><%= link_to 'Edit -', edit_product_path(product) %><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-   </tr>
-   </tbody>
-</table>
-</div>
-   <% end %>
+<%= render @products %>
 
 <footer class="footer navbar-fixed-bottom">
 <%= link_to 'New Product', new_product_path %>
