--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,28 +13,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body data-spy="scroll" data-target=".navbar">
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
-            <span class="sr-only">Toggle Navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <div class="navbar-brand">
-            <a href='/'>Jammin' Jams</a>
-          </div>
-        </div>
-          <div class="collapse navbar-collapse" id="navbar-collapse">
-            <ul class="nav navbar-nav">
-               <li><%= link_to("Contact", { action: "contact", controller: "static_pages"}) %></li>
-              <li><%= link_to("About Us", { action: "about", controller: "static_pages" }) %></li>
-               <li><%= link_to("Products", { action: "index", controller: "products" }) %></li>
-            </ul>
-          </div>
-        </div>
-    </nav>
+		<%= render 'layouts/nav' %>
 <%= yield %>
 
 </body>
