--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -16,6 +16,12 @@
                <li><%= link_to("Contact", { action: "contact", controller: "static_pages"}) %></li>
               <li><%= link_to("About Us", { action: "about", controller: "static_pages" }) %></li>
                <li><%= link_to("Products", { action: "index", controller: "products" }) %></li>
+               <li>
+               <%= form_tag("/products", method: "get") do %>
+                  <%= label_tag(:q, "Search for:") %>
+                  <%= text_field_tag(:q) %>
+                  <%= submit_tag("Search") %>
+               <% end %></li>
             </ul>
           </div>
         </div>
