--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -50,3 +50,11 @@ footer {
 .anchor {
    padding-top: 50px;
 }
+
+.thanks_box {
+   display: block;
+   padding-top: 20em;
+   padding-left: 40em;
+   text-align: center;
+   float: right;
+}
