--- a/app/views/static_pages/_contactform.html.erb
+++ b/app/views/static_pages/_contactform.html.erb
@@ -1,11 +1,21 @@
-<%= form_tag do %>
-   <div class="form-group">
-      <%= text_area_tag :message, "Name", size: "6x1", class: "form-control" %>
-      <br>
-      <%= email_field(:user, :address, class: "form-control") %>
-      <br>
-      <%= text_area_tag(:message, "Hi, nice site", size: "24x6", class:"form-control") %>
-      <br>
-      <%= submit_tag("Submit") %>
-   </div>
+<%= flash[:notice] %>
+
+<%= form_tag("/static_pages/thank_you") do %>
+<div class="row">
+	<div class="col-md-4">
+		<div class="form-group">
+			<%= label_tag :name, "Name" %>
+	    <%= text_field_tag :name, nil, class: "form-control", placeholder: "Enter Name" %>
+		</div>		
+		<div class="form-group">
+			<%= label_tag :email, "Email Address" %>
+			<%= text_field_tag :email, nil, class: "form-control", placeholder: "Enter Email" %>
+		</div>
+		<div class="form-group">
+			<%= label_tag :message, "Message" %>
+			<%= text_area_tag :message, nil, class: "form-control", placeholder: "Enter Message" %>
+		</div>		
+	</div>
+</div> 
+<%= submit_tag "Send" %>   
 <% end %>
