--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body data-spy="scroll" data-target=".navbar">
-		<%= render 'layouts/nav' %>
+       <p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
+   		<%= render 'layouts/nav' %>
 <%= yield %>
 
 </body>
