added comments branch

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,4 +1,4 @@
-<div class = "container prdct anchor">
+<div class = "container prdct ">
 <table class="table-bordered table-striped">   
 <thead>
       <tr>
