--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -11,10 +11,67 @@
    word-wrap: break-word !important;
 }
 
+
 th {
    text-align: center;
 }
 
 td:last-child {
    text-align: center;
+}
+
+h1 {
+	font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 23px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 23px;
+       text-align: center;
+
+}
+h3 {
+	font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 17px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 23px;
+       text-align: center;
+
+}
+p {
+	font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 14px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 400;
+	line-height: 23px;
+}
+blockquote {
+	font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 17px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 400;
+	line-height: 23px;
+}
+pre {
+	font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 11px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 400;
+	line-height: 23px;
+}
+
+.show_product {
+    background-color: rgba(71,53,36,0.75);
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    text-align: center;
+    display: block;
 }
