--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,28 +1,22 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</p>
+<div class="container fluid show_product">
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
+<h1><%= @product.name %></h1>
 
-<p>
-  <strong>Image url:</strong>
-  <%= @product.image_url %>
-</p>
 
-<p>
-  <strong>Color:</strong>
-  <%= @product.colour %>
-</p>
-<p>
+  <h3>Description:</h3>
+   <p><%= @product.description %></p>
+
+
+   <%= image_tag(@product.image_url, class: "img-thumbnail") %>
+
+   <p><%= @product.colour %></p>
+
   <strong>Price:</strong> 
-  <%= @product.price %>
-</p>
+   <p>$<%= @product.price %></p>
+</div>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+<footer class="footer navbar-fixed-bottom"><%= link_to 'Edit', edit_product_path(@product) %> |
+<%= link_to 'Back', products_path %></footer>
+
