--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -7,7 +7,7 @@
    </thead>
    <tbody>
          <tr>
-      <td class="col-sm-6 col-md-3"><%= image_tag(product.image_url) %></td>
+      <td class="col-sm-6 col-md-3"><%= image_tag(product.image_url, class: "img-thumbnail", width: "140", height: "140") %></td>
    </tr>
    <tr>
       <td class="col-sm-6 col-md-3"><%= product.description %></td>
