--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <div class="container fluid show_product">
 
 <h1><%= @product.name %></h1>
@@ -15,8 +13,12 @@
 
   <strong>Price:</strong> 
    <p>$<%= @product.price %></p>
+   		<p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div> </p>
+
 </div>
+
+<%= render 'new_comment' %>
+<%= render 'comments' %>
 
 <footer class="footer navbar-fixed-bottom"><%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %></footer>
-
