--- a/app/views/products/_comments.html.erb
+++ b/app/views/products/_comments.html.erb
@@ -14,3 +14,9 @@
 		</div>
 	<% end %>
 </div>
+<center></center>
+
+<div class="digg_pagination"><center>   
+   <%= will_paginate @comments, :page_links => false %>
+   </center>
+</div>
