Added Admin Flag to Users

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,5 +5,7 @@
 <%= render @products %>
 
 <footer class="footer navbar-fixed-bottom">
-<%= link_to 'New Product', new_product_path %>
+         <%  if signed_in? && current_user.admin? %>
+   <%= link_to 'New Product', new_product_path %>
+         <% end %>
 </footer>
