--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -19,7 +19,12 @@
       <td class="col-sm-6 col-md-3">$<%= product.price %></td>
    </tr>
    <tr>
-      <td class="col-sm-6 col-md-3"><%= link_to 'Show -', product %><%= link_to 'Edit -', edit_product_path(product) %><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <td class="col-sm-6 col-md-3"><%= link_to 'Show -', product %>
+         <%  if signed_in? && current_user.admin? %>
+            <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+            <%= link_to 'Edit -', edit_product_path(product) %>
+         <% end %>
+      </td>
    </tr>
    </tbody>
 </table>
