--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -20,5 +20,7 @@
 <%= render 'new_comment' %>
 <%= render 'comments' %>
 
-<footer class="footer navbar-fixed-bottom"><%= link_to 'Edit', edit_product_path(@product) %> |
+<footer class="footer navbar-fixed-bottom">         <%  if signed_in? && current_user.admin? %>
+            <%= link_to 'Edit -', edit_product_path(product) %>
+         <% end %> |
 <%= link_to 'Back', products_path %></footer>
