--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,11 @@
        <p id="alert" class="alert alert-success " data-dismiss="alert"><%= alert %></p>
    <% end %>
    
+   <div class="jumbotron">
+    <div class="container">
+        <h1>maiden books</h1>
+    </div>
+</div>
    <%= render 'layouts/nav' %>
 <%= yield %>
 
