--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,27 +1,20 @@
-<div class="container-fluid anchor" id="text-box">
-   <h2>Featured Product: </h2>
-   <%= @featured_product.name %>
-   
-</div>
-   <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
-     
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
   </ol>
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <% @products.each do |product| %>
-     <div class="item<%= " active" if product == @products.first %>">
-       <center><%= image_tag(product.image_url) %></center>
-      <div class="carousel-caption">
-        <%= product.name %>
-      </div>
-        </div>
-    <% end %>
+	    <div class="item<%= " active" if product == @products.first %>">
+	      <%= image_tag(product.image_url) %>
+	      <div class="carousel-caption">
+	        <p><%= product.name %></p>
+	      </div>
+	    </div>
+	  <% end %>
   </div>
 
   <!-- Controls -->
@@ -33,5 +26,4 @@
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-      
 </div>
