--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,9 +11,12 @@
 
    <p><%= @product.colour %></p>
 
-  <strong>Price:</strong> 
+  <strong>Price:</strong>
    <p>$<%= @product.price %></p>
    <p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div> </p>
+   <%= form_tag "/payments/create" do %>
+   <%= render partial: "shared/stripe_checkout_button" %>
+   <% end %>
 
 </div>
 
