--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,5 +1,43 @@
-<input type="text" placeholder="Name" ng-model="shop" />
-
 <div ng-controller="OrdersCtrl">
-  {{name}}
-</div>
+  <h1>Orders</h1>
+
+  <form class="form-inline" ng-submit="addOrder()">
+    <strong>Add order: </strong>
+
+    <input type="number" step="0.01" ng-model="newOrder.total" class="form-control" placeholder="Total">
+
+    <select ng-model="newOrder.product_id" class="form-control">
+      <option value="" disabled selected>Select a product</option>
+      <option ng-repeat="product in products" value="{{product.id}}">{{product.name}}</option>
+    </select>
+
+    <input type="submit" value="+" class="btn btn-success">
+  </form>
+
+  <table class="table table-hover">
+    <thead>
+      <td>Order ID</td>
+      <td>Total</td>
+      <td>Product</td>
+      <td></td>
+    </thead>
+    <tbody>
+      <tr ng-repeat="order in orders | orderBy:'-id':reverse">
+        <td>
+          {{order.id}}
+        </td>
+        <td>
+          <strong>{{order.total | currency}}</strong>
+        </td>
+        <td>
+          {{order.product.name}}
+          <small ng-show="order.user.email" class="text-muted"><br>-{{order.user.email}}</small>
+        </td>
+        <td>
+          <button ng-click="deleteOrder(order)" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+</div> <!-- ng-controller -->
