--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,7 @@
 <div class="container fluid show_product">
 
+<% cache @product do %>
+
 <h1><%= @product.name %></h1>
 
 
@@ -17,6 +19,7 @@
    <%= form_tag "/payments/create" do %>
    <%= render partial: "shared/stripe_checkout_button" %>
    <% end %>
+  <% end %>
 
 </div>
 
